--- a/src/styles/scss/custom.scss
+++ b/src/styles/scss/custom.scss
@@ -1,1 +1,11 @@
 @import "../../../node_modules/bootstrap/scss/bootstrap";
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../../assets/fonts/Montserrat-ExtraLight.ttf') format('truetype');
+}
+
+@font-face {
+    font-family: 'Cabin';
+    src: url('../../assets/fonts/Cabin-SemiBoldItalic.ttf') format('truetype');
+}
