--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -4,6 +4,8 @@
  * Copyright 2011-2024 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+@import '../../node_modules/bootstrap-icons/font/bootstrap-icons.css';
+@import '../../node_modules/material-icons/iconfont/material-icons.css';
 :root,
 [data-bs-theme=light] {
   --bs-blue: #0d6efd;
@@ -11861,11 +11863,6 @@ body {
   padding-top: 4px;
   padding-bottom: 6px;
   background-color: #1D2D44;
-}
-
-.profile-picture {
-  border-radius: 50%;
-  margin-right: 25px;
 }
 
 .navbar-brand {
