--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -11899,7 +11899,8 @@ body {
 
 main {
   color: white;
-  padding-top: 60px;
+  padding-top: 30px;
+  margin-bottom: 5rem;
 }
 
 .main-img {
@@ -11932,20 +11933,39 @@ main {
   margin: 40px 40px;
 }
 
-.label .page-label {
-  background-color: #52B2CF;
-  padding: 0px 30px;
-  padding-bottom: 8px;
-  font-size: 40px;
-  font-weight: 400;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+.border-primary {
+  border-color: #52B2CF !important;
 }
 
 .card {
-  margin: 20% 0% 10% 0%;
-  border: 2px solid #52B2CF;
-  border-radius: 10%;
+  color: white;
+  border: 1px solid #52B2CF;
+  background-color: #0D1321;
   overflow: hidden;
+}
+
+.card-enlarge {
+  transition: transform 0.5s, box-shadow 0.2s;
+}
+
+.card-margin-lg {
+  background-color: #1D2D44;
+  margin: 4rem 0% 4rem 0%;
+}
+
+.resume-container {
+  width: 100%;
+  height: 70rem;
+}
+
+.img-container {
+  background-size: cover;
+  height: 100%;
+}
+
+.card-enlarge:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 20px #52B2CF;
 }
 
 .card-title {
@@ -11956,6 +11976,26 @@ main {
 .card-text {
   text-align: left;
   margin: 25px;
+}
+
+.footer {
+  height: 3rem;
+  color: #fff;
+}
+
+.footer-link {
+  margin-right: 1rem;
+}
+
+.footer-i {
+  color: white;
+}
+
+.footer-link a {
+  font-size: 20px;
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.496);
+  margin: 0, 3rem, 0, 3rem;
 }
 
 /*# sourceMappingURL=main.css.map */
