--- a/styles/scss/custom.scss
+++ b/styles/scss/custom.scss
@@ -76,7 +76,8 @@ body {
 
 main {
     color:white;
-    padding-top: 60px;
+    padding-top: 30px;
+    margin-bottom: 5rem;
 }
 
 .main-img {
@@ -86,7 +87,6 @@ main {
 .call-to-action {
     font-size: 20px;
     padding: 30% 0% 70% 0%;
-
 }
 
 .cta-main {
@@ -110,20 +110,40 @@ main {
     margin: 40px 40px;
 }
 
-.label .page-label {
-    background-color: $moonstone;
-    padding: 0px 30px;
-    padding-bottom: 8px;
-    font-size: 40px;
-    font-weight: 400;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+.border-primary {
+    border-color: $moonstone
+    !important;
 }
 
 .card  {
-    margin: 20% 0% 10% 0%;
-    border: 2px solid $moonstone;
-    border-radius: 10%;
+    color: white;
+    border: 1px solid $moonstone;
+    background-color: #0D1321;
     overflow: hidden;
+}
+
+.card-enlarge {
+    transition: transform .5s, box-shadow .2s;
+}
+
+.card-margin-lg {
+    background-color: $prussian-blue;
+    margin: 4rem 0% 4rem 0%;
+}
+
+.resume-container {
+    width: 100%;
+    height: 70rem;
+}
+
+.img-container {
+    background-size: cover;
+    height: 100%;
+}
+
+.card-enlarge:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px $moonstone;
 }
 
 .card-title {
@@ -134,4 +154,24 @@ main {
 .card-text {
     text-align: left;  
     margin: 25px;
+}
+
+.footer {
+    height: 3rem;
+    color: $white;
+}
+
+.footer-link {
+    margin-right: 1rem;
+}
+
+.footer-i {
+    color: white;
+}
+
+.footer-link a {
+    font-size: 20px;
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.496);
+    margin: 0, 3rem, 0, 3rem;
 }
